updated functions for buttons.

--- a/widget/device-control-widget.component.css
+++ b/widget/device-control-widget.component.css
@@ -5,20 +5,25 @@
     width: 100%;
     padding: 10px 10px 5px;
 }
+
 .gp-device-list .refresh-panel {
     color: #1776BF;
 }
+
 .header-item {
     flex-grow: 1;
 }
+
 .refresh-panel {
     float: right;
 }
+
 .device-list-table {
     width: 100%;
     background-color: var(--table-background, var(--component-background, var(--root-component-background, #fff)));
     table-layout: fixed;
 }
+
 .device-list-table td.mat-cell,
 .device-list-table td.mat-footer-cell,
 .device-list-table th.mat-header-cell {
@@ -28,20 +33,24 @@
     width: 100px;
     padding-right: 10px;
     white-space: normal;
+
     color: var(--component-color, var(--root-component-color, var(--gray-text, #000)));
     border-bottom-color: var(--table-border, var(--component-border, var(--root-component-border, rgba(0, 0, 0, 0.1))));
 }
-.btn-group
-{
-    padding-bottom:45px;
+
+.btn-group {
+    padding-bottom: 45px;
 }
+
 .small-icon {
     width: 5em;
     height: 5em;
 }
+
 img.small-icon.withhover:hover {
-    background: gray;
+    background: rgb(255, 255, 255);
 }
+
 .grid-container {
     display: inline-flex;
     min-width: 100%;
@@ -50,6 +59,7 @@ img.small-icon.withhover:hover {
     text-align-last: justify;
     justify-content: center;
 }
+
 .grid-item {
     display: flex;
     flex-flow: column;
@@ -57,6 +67,7 @@ img.small-icon.withhover:hover {
     text-align: center;
     align-items: center;
 }
+
 .grid-element {
     display: flex;
     width: 100%;
@@ -66,10 +77,12 @@ img.small-icon.withhover:hover {
     align-items: center;
     margin-bottom: 5px;
 }
+
 .padinline {
     padding: 0.5em;
     vertical-align: bottom;
 }
+
 .button-row {
     display: flex;
     width: 100%;
@@ -145,6 +158,7 @@ img.withhover:hover {
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
     width: 85%;
+    color: #f6e6e6;
 }
 
 .mdlstyled-input:focus {
@@ -159,7 +173,7 @@ img.withhover:hover {
 
 .device-card {
     transform-style: preserve-3d;
-   height: 260px;
+    height: 260px;
     -webkit-backface-visibility: visible;
     backface-visibility: visible;
     margin: 20px;
@@ -195,3 +209,54 @@ img.withhover:hover {
 .inputTheme:focus {
     color: #000;
 }
+
+.criticalAlerts {
+    background-color: #e0000e;
+}
+
+.majorAlerts {
+    background-color: #e66400;
+}
+
+.minorAlerts {
+    background-color: #ff801f;
+}
+
+.warningAlerts {
+    background-color: #1c8ce3;
+}
+
+.criticalAlerts2 {
+    color: #e0000e;
+}
+
+.majorAlerts2 {
+    color: #e66400;
+}
+
+.minorAlerts2 {
+    color: #ff801f;
+}
+
+.warningAlerts2 {
+    color: #1c8ce3;
+}
+
+.majorAlert {
+    color: #e66400;
+}
+
+.selectDropdown .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected {
+    color: var(--brand-dark);
+}
+
+.btn-default {
+    border-color: var(--brand-dark);
+}
+
+.header-mode {
+    color: var(--brand-dark);
+}
+
+
+
