stylling, dashboard settings added

--- a/widget/device-control-widget.component.css
+++ b/widget/device-control-widget.component.css
@@ -159,10 +159,9 @@ img.withhover:hover {
 
 .device-card {
     transform-style: preserve-3d;
-   height: 260px;
+    height:fit-content;
     -webkit-backface-visibility: visible;
     backface-visibility: visible;
-    margin: 20px;
     max-width: 300px;
     width: 220px;
     transition: all 1s linear;
@@ -194,4 +193,8 @@ img.withhover:hover {
 
 .inputTheme:focus {
     color: #000;
+}
+
+.pointer:hover{
+    cursor: pointer;
 }
